Adicionando biblioteca do jquery/owl.carousel

--- a/src/views/pages/home/index.html
+++ b/src/views/pages/home/index.html
@@ -217,47 +217,95 @@
       <p>Os servidores pioneiros do MPF representam um patrimônio vivo da Instituição,<br/> servindo como base sólida para o futuro. Há 30 anos, eles embarcaram em um caminho <br/> de desafios e conquistas para a construção da Justiça no Brasil. <br/> Hoje contamos com mais de 700 servidores do primeiro concurso ainda ativos e convidamos alguns<br/> deles a compartilhar um pouco de suas experiências e histórias.</p>
     </div>
 
-    <ul class="slides">
-      <li class="card">
-        <div class="dados">
-          <div class="text">
-            <strong>Cila de Castro Silva</strong>
-            <p>Cila iniciou sua carreira<br/> no Ministério Público do Trabalho. <br/>Em 2006, inicia sua trajetória <br/>na área de Gestão de Pessoas <br/>do Ministério Público Federal. <br/>A sua atuação na área que cuida <br/>de férias e frequência permite <br/>que ela tenha a oportunidade <br/>de ter contato com o público interno<br/> em todo o país: “Sinto que posso<br/> ajudar as pessoas”.</p>
-          </div>
+    <div class="owl-carousel owl-theme">
+      <div class="item">
+        <div class="card">
+          <div class="dados">
+            <div class="text">
+              <strong>Cila de Castro Silva</strong>
+              <p>Cila iniciou sua carreira<br/> no Ministério Público do Trabalho. <br/>Em 2006, inicia sua trajetória <br/>na área de Gestão de Pessoas <br/>do Ministério Público Federal. <br/>A sua atuação na área que cuida <br/>de férias e frequência permite <br/>que ela tenha a oportunidade <br/>de ter contato com o público interno<br/> em todo o país: “Sinto que posso<br/> ajudar as pessoas”.</p>
+            </div>
 
-          <div class="avatar">
-            <img src="@images/avatar-1.png" />
+            <div class="avatar">
+              <img src="@images/avatar-1.png" />
+            </div>
           </div>
+          <button type="button">Assistir ao vídeo</button>
         </div>
-        <button type="button">Assistir ao vídeo</button>
-      </li>
-      <li class="card">
-        <div class="dados">
-          <div class="text">
-            <strong>Cila de Castro Silva</strong>
-            <p>Cila iniciou sua carreira<br/> no Ministério Público do Trabalho. <br/>Em 2006, inicia sua trajetória <br/>na área de Gestão de Pessoas <br/>do Ministério Público Federal. <br/>A sua atuação na área que cuida <br/>de férias e frequência permite <br/>que ela tenha a oportunidade <br/>de ter contato com o público interno<br/> em todo o país: “Sinto que posso<br/> ajudar as pessoas”.</p>
-          </div>
+      </div>
+      <div class="item">
+        <div class="card">
+          <div class="dados">
+            <div class="text">
+              <strong>Cila de Castro Silva</strong>
+              <p>Cila iniciou sua carreira<br/> no Ministério Público do Trabalho. <br/>Em 2006, inicia sua trajetória <br/>na área de Gestão de Pessoas <br/>do Ministério Público Federal. <br/>A sua atuação na área que cuida <br/>de férias e frequência permite <br/>que ela tenha a oportunidade <br/>de ter contato com o público interno<br/> em todo o país: “Sinto que posso<br/> ajudar as pessoas”.</p>
+            </div>
 
-          <div class="avatar">
-            <img src="@images/avatar-1.png" />
+            <div class="avatar">
+              <img src="@images/avatar-1.png" />
+            </div>
           </div>
+          <button type="button">Assistir ao vídeo</button>
         </div>
-        <button type="button">Assistir ao vídeo</button>
-      </li>
-      <li class="card">
-        <div class="dados">
-          <div class="text">
-            <strong>Cila de Castro Silva</strong>
-            <p>Cila iniciou sua carreira<br/> no Ministério Público do Trabalho. <br/>Em 2006, inicia sua trajetória <br/>na área de Gestão de Pessoas <br/>do Ministério Público Federal. <br/>A sua atuação na área que cuida <br/>de férias e frequência permite <br/>que ela tenha a oportunidade <br/>de ter contato com o público interno<br/> em todo o país: “Sinto que posso<br/> ajudar as pessoas”.</p>
-          </div>
+      </div>
+      <div class="item">
+        <div class="card">
+          <div class="dados">
+            <div class="text">
+              <strong>Cila de Castro Silva</strong>
+              <p>Cila iniciou sua carreira<br/> no Ministério Público do Trabalho. <br/>Em 2006, inicia sua trajetória <br/>na área de Gestão de Pessoas <br/>do Ministério Público Federal. <br/>A sua atuação na área que cuida <br/>de férias e frequência permite <br/>que ela tenha a oportunidade <br/>de ter contato com o público interno<br/> em todo o país: “Sinto que posso<br/> ajudar as pessoas”.</p>
+            </div>
 
-          <div class="avatar">
-            <img src="@images/avatar-1.png" />
+            <div class="avatar">
+              <img src="@images/avatar-1.png" />
+            </div>
           </div>
+          <button type="button">Assistir ao vídeo</button>
         </div>
-        <button type="button">Assistir ao vídeo</button>
-      </li>
-    </ul>
+      </div>
+    </div>
+
+<!--    <ul class="slides">-->
+<!--      <li class="card">-->
+<!--        <div class="dados">-->
+<!--          <div class="text">-->
+<!--            <strong>Cila de Castro Silva</strong>-->
+<!--            <p>Cila iniciou sua carreira<br/> no Ministério Público do Trabalho. <br/>Em 2006, inicia sua trajetória <br/>na área de Gestão de Pessoas <br/>do Ministério Público Federal. <br/>A sua atuação na área que cuida <br/>de férias e frequência permite <br/>que ela tenha a oportunidade <br/>de ter contato com o público interno<br/> em todo o país: “Sinto que posso<br/> ajudar as pessoas”.</p>-->
+<!--          </div>-->
+
+<!--          <div class="avatar">-->
+<!--            <img src="@images/avatar-1.png" />-->
+<!--          </div>-->
+<!--        </div>-->
+<!--        <button type="button">Assistir ao vídeo</button>-->
+<!--      </li>-->
+<!--      <li class="card">-->
+<!--        <div class="dados">-->
+<!--          <div class="text">-->
+<!--            <strong>Cila de Castro Silva</strong>-->
+<!--            <p>Cila iniciou sua carreira<br/> no Ministério Público do Trabalho. <br/>Em 2006, inicia sua trajetória <br/>na área de Gestão de Pessoas <br/>do Ministério Público Federal. <br/>A sua atuação na área que cuida <br/>de férias e frequência permite <br/>que ela tenha a oportunidade <br/>de ter contato com o público interno<br/> em todo o país: “Sinto que posso<br/> ajudar as pessoas”.</p>-->
+<!--          </div>-->
+
+<!--          <div class="avatar">-->
+<!--            <img src="@images/avatar-1.png" />-->
+<!--          </div>-->
+<!--        </div>-->
+<!--        <button type="button">Assistir ao vídeo</button>-->
+<!--      </li>-->
+<!--      <li class="card">-->
+<!--        <div class="dados">-->
+<!--          <div class="text">-->
+<!--            <strong>Cila de Castro Silva</strong>-->
+<!--            <p>Cila iniciou sua carreira<br/> no Ministério Público do Trabalho. <br/>Em 2006, inicia sua trajetória <br/>na área de Gestão de Pessoas <br/>do Ministério Público Federal. <br/>A sua atuação na área que cuida <br/>de férias e frequência permite <br/>que ela tenha a oportunidade <br/>de ter contato com o público interno<br/> em todo o país: “Sinto que posso<br/> ajudar as pessoas”.</p>-->
+<!--          </div>-->
+
+<!--          <div class="avatar">-->
+<!--            <img src="@images/avatar-1.png" />-->
+<!--          </div>-->
+<!--        </div>-->
+<!--        <button type="button">Assistir ao vídeo</button>-->
+<!--      </li>-->
+<!--    </ul>-->
   </div>
 </section>
 {% endblock %}
