--- a/src/views/pages/home/style.scss
+++ b/src/views/pages/home/style.scss
@@ -389,51 +389,45 @@
     }
   }
 
-  .slides {
-    list-style: none;
-    padding: 0 0 30px;
-    margin: 0;
-    display: flex;
-    flex-direction: row;
-    white-space: nowrap;
-    gap: 30px;
+  .owl-carousel .owl-stage-outer,
+  .owl-carousel .owl-stage {
+    overflow: visible !important; /* Allow content to overflow */
+  }
 
+  .card {
+    background: #7d2b8a;
+    padding: 50px;
+    border-radius: 50px;
 
-    li {
-      background: #7d2b8a;
-      padding: 50px;
-      border-radius: 50px;
+    .dados {
+      display: flex;
+      flex-direction: row;
+      gap: 30px;
+      margin-bottom: 30px;
 
-      .dados {
-        display: flex;
-        flex-direction: row;
-        gap: 30px;
-        margin-bottom: 30px;
-
-        .text {
-          strong {
-            color: #84c0eb;
-            font-size: 23px;
-            display: block;
-            margin-bottom: 10px;
-            line-height: normal;
-          }
-
-          p {
-            font-size: 18px;
-            line-height: normal;
-            color: #f5f5f5;
-            margin: 0;
-          }
+      .text {
+        strong {
+          color: #84c0eb;
+          font-size: 23px;
+          display: block;
+          margin-bottom: 10px;
+          line-height: normal;
         }
 
-        .avatar {
-          width: 161px;
-          height: 200px;
+        p {
+          font-size: 18px;
+          line-height: normal;
+          color: #f5f5f5;
+          margin: 0;
+        }
+      }
 
-          img {
-            object-fit: fill;
-          }
+      .avatar {
+        width: 161px;
+        height: 200px;
+
+        img {
+          object-fit: fill;
         }
       }
     }
