Criando sessoes 'um-novo-tempo' e 'questionario'

--- a/src/views/pages/home/index.html
+++ b/src/views/pages/home/index.html
@@ -210,7 +210,7 @@
   </div>
 </section>
 
-<section id="dados-do-concurso">
+<section id="servidores">
   <div class="align-wrapper">
     <div class="text">
       <h2>DO PASSADO AO FUTURO</h2>
@@ -264,48 +264,154 @@
         </div>
       </div>
     </div>
+  </div>
+</section>
 
-<!--    <ul class="slides">-->
-<!--      <li class="card">-->
-<!--        <div class="dados">-->
-<!--          <div class="text">-->
-<!--            <strong>Cila de Castro Silva</strong>-->
-<!--            <p>Cila iniciou sua carreira<br/> no Ministério Público do Trabalho. <br/>Em 2006, inicia sua trajetória <br/>na área de Gestão de Pessoas <br/>do Ministério Público Federal. <br/>A sua atuação na área que cuida <br/>de férias e frequência permite <br/>que ela tenha a oportunidade <br/>de ter contato com o público interno<br/> em todo o país: “Sinto que posso<br/> ajudar as pessoas”.</p>-->
-<!--          </div>-->
+<section id="dados-do-concurso">
+  <div class="align-wrapper">
+    <div class="owl-carousel owl-theme">
+      <div class="item">
+        <div class="box">
 
-<!--          <div class="avatar">-->
-<!--            <img src="@images/avatar-1.png" />-->
-<!--          </div>-->
-<!--        </div>-->
-<!--        <button type="button">Assistir ao vídeo</button>-->
-<!--      </li>-->
-<!--      <li class="card">-->
-<!--        <div class="dados">-->
-<!--          <div class="text">-->
-<!--            <strong>Cila de Castro Silva</strong>-->
-<!--            <p>Cila iniciou sua carreira<br/> no Ministério Público do Trabalho. <br/>Em 2006, inicia sua trajetória <br/>na área de Gestão de Pessoas <br/>do Ministério Público Federal. <br/>A sua atuação na área que cuida <br/>de férias e frequência permite <br/>que ela tenha a oportunidade <br/>de ter contato com o público interno<br/> em todo o país: “Sinto que posso<br/> ajudar as pessoas”.</p>-->
-<!--          </div>-->
+          <div class="data">
+            <h2>UM NOVO TEMPO PARA O MPU</h2>
+            <p>Após apreciação pelo Congresso Nacional do plano de cargos e salários,
+              a Lei nº 8.628/1993 criou a carreira de apoio técnico-administrativo do MPU.
+              O primeiro concurso, realizado em 1993, foi liderado pelo procurador-geral
+              Aristides Junqueira Alvarenga e ofereceu 2.481 vagas para 37 cargos.
+              As provas foram realizadas nas 27 capitais do país.</p>
 
-<!--          <div class="avatar">-->
-<!--            <img src="@images/avatar-1.png" />-->
-<!--          </div>-->
-<!--        </div>-->
-<!--        <button type="button">Assistir ao vídeo</button>-->
-<!--      </li>-->
-<!--      <li class="card">-->
-<!--        <div class="dados">-->
-<!--          <div class="text">-->
-<!--            <strong>Cila de Castro Silva</strong>-->
-<!--            <p>Cila iniciou sua carreira<br/> no Ministério Público do Trabalho. <br/>Em 2006, inicia sua trajetória <br/>na área de Gestão de Pessoas <br/>do Ministério Público Federal. <br/>A sua atuação na área que cuida <br/>de férias e frequência permite <br/>que ela tenha a oportunidade <br/>de ter contato com o público interno<br/> em todo o país: “Sinto que posso<br/> ajudar as pessoas”.</p>-->
-<!--          </div>-->
+            <p>
+              <strong>TOTAL DE VAGAS: 2480 </strong>
+              <span>Vagas previstas no edital</span>
+            </p>
+          </div>
 
-<!--          <div class="avatar">-->
-<!--            <img src="@images/avatar-1.png" />-->
-<!--          </div>-->
-<!--        </div>-->
-<!--        <button type="button">Assistir ao vídeo</button>-->
-<!--      </li>-->
-<!--    </ul>-->
+          <div class="grafico-inscritos">
+
+            <span class="instrucao">Passe o mouse sobre os itens abaixo:</span>
+
+            <div class="align">
+              <ul class="labels">
+                <li class="bullet">INSCRITOS</li>
+                <li class="bullet">CANDIDATOS</li>
+                <li class="bullet">APROVADOS</li>
+                <li class="bullet">NOMEADOS</li>
+                <li class="bullet">POR RAMO</li>
+              </ul>
+
+              <div class="grafico">
+                <img src="@images/inscritos.png" />
+              </div>
+
+              <div class="info">
+                <h3>Inscritos</h3> <strong>+ 320 mil</strong> <span>inscritos</span></h3>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+      <div class="item">
+        <div class="box">
+
+          <div class="data">
+            <h2>UM NOVO TEMPO PARA O MPU</h2>
+            <p>Após apreciação pelo Congresso Nacional do plano de cargos e salários,
+              a Lei nº 8.628/1993 criou a carreira de apoio técnico-administrativo do MPU.
+              O primeiro concurso, realizado em 1993, foi liderado pelo procurador-geral
+              Aristides Junqueira Alvarenga e ofereceu 2.481 vagas para 37 cargos.
+              As provas foram realizadas nas 27 capitais do país.</p>
+
+            <p>
+              <strong>TOTAL DE VAGAS: 2480 </strong>
+              <span>Vagas previstas no edital</span>
+            </p>
+          </div>
+
+          <div class="grafico-inscritos">
+
+            <span class="instrucao">Passe o mouse sobre os itens abaixo:</span>
+
+            <div class="align">
+              <ul class="labels">
+                <li class="bullet">INSCRITOS</li>
+                <li class="bullet">CANDIDATOS</li>
+                <li class="bullet">APROVADOS</li>
+                <li class="bullet">NOMEADOS</li>
+                <li class="bullet">POR RAMO</li>
+              </ul>
+
+              <div class="grafico">
+                <img src="@images/inscritos.png" />
+              </div>
+
+              <div class="info">
+                <h3>Inscritos</h3> <strong>+ 320 mil</strong> <span>inscritos</span></h3>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+      <div class="item">
+        <div class="box">
+
+          <div class="data">
+            <h2>UM NOVO TEMPO PARA O MPU</h2>
+            <p>Após apreciação pelo Congresso Nacional do plano de cargos e salários,
+              a Lei nº 8.628/1993 criou a carreira de apoio técnico-administrativo do MPU.
+              O primeiro concurso, realizado em 1993, foi liderado pelo procurador-geral
+              Aristides Junqueira Alvarenga e ofereceu 2.481 vagas para 37 cargos.
+              As provas foram realizadas nas 27 capitais do país.</p>
+
+            <p>
+              <strong>TOTAL DE VAGAS: 2480 </strong>
+              <span>Vagas previstas no edital</span>
+            </p>
+          </div>
+
+          <div class="grafico-inscritos">
+
+            <span class="instrucao">Passe o mouse sobre os itens abaixo:</span>
+
+            <div class="align">
+              <ul class="labels">
+                <li class="bullet">INSCRITOS</li>
+                <li class="bullet">CANDIDATOS</li>
+                <li class="bullet">APROVADOS</li>
+                <li class="bullet">NOMEADOS</li>
+                <li class="bullet">POR RAMO</li>
+              </ul>
+
+              <div class="grafico">
+                <img src="@images/inscritos.png" />
+              </div>
+
+              <div class="info">
+                <h3>Inscritos</h3> <strong>+ 320 mil</strong> <span>inscritos</span></h3>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="questoes-da-prova">
+  <div class="align-wrapper">
+    <div class="text">
+      <h2>QUESTÕES DA PROVA</h2>
+      <p>Responda algumas das questões da prova de 1993 e teste seus conhecimentos</p>
+    </div>
   </div>
 </section>
 {% endblock %}
