--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -3,6 +3,7 @@
 @use 'base/space';
 @use 'base/layout';
 
+
 // App font: load your font
 //@use 'base/fonts/arial' as font;
 //@use 'base/fonts/helvetica' as font;
@@ -17,3 +18,7 @@
 
 // Page layout: header, main, footer
 @use 'pages/default-layout';
+
+// Owl carousel
+@import "~owl.carousel/dist/assets/owl.carousel.min.css";
+@import "~owl.carousel/dist/assets/owl.theme.green.min.css";
