--- a/src/views/pages/home/style.scss
+++ b/src/views/pages/home/style.scss
@@ -366,7 +366,7 @@
   }
 }
 
-#dados-do-concurso {
+#servidores {
   background: #2e2e82;
 
   .text {
@@ -434,3 +434,131 @@
   }
 }
 
+#dados-do-concurso {
+  background: #f5f5f5;
+
+  //.owl-carousel .owl-stage-outer,
+  //.owl-carousel .owl-stage {
+  //  overflow: visible !important; /* Allow content to overflow */
+  //}
+
+  .box {
+    padding: 20px 50px;
+    border: 1px solid #7f2a7e;
+    border-radius: 50px;
+
+    .data {
+      margin-bottom: 20px;
+      color: #434244;
+
+      h2 {
+        font-size: 23px;
+        margin: 0 0 30px;
+      }
+
+      p {
+        display: block;
+        font-size: 18px;
+        margin: 0 0 15px;
+
+        strong {
+          display: block;
+        }
+      }
+    }
+
+    .grafico-inscritos {
+      .instrucao {
+        color: #7d2b8a;
+        font-size: 14px;
+        display: block;
+        margin-bottom: 15px;
+        font-weight: bold;
+      }
+      .align {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        gap: 50px;
+
+        .labels {
+          list-style: none;
+          margin: 0;
+          padding: 0;
+
+          li {
+            padding: 0 0 0 25px;
+            position: relative;
+            margin-bottom: 10px;
+            font-size: 14px;
+            color: #434244;
+            font-weight: bold;
+
+            &:before {
+              content: "";
+              width: 15px;
+              height: 15px;
+              background: #434244;
+              border-radius: 50%;
+              position: absolute;
+              left: 0;
+              top: 50%;
+              transform: translateY(-50%);
+            }
+          }
+
+        }
+
+        .info {
+          h3 {
+            font-size: 50px;
+            color: #333380;
+            display: block;
+            margin: 0 0 20px;
+            line-height: normal;
+          }
+
+          strong {
+            font-size: 50px;
+            display: block;
+            margin: 0;
+            line-height: normal;
+          }
+
+          span {
+            display: block;
+            font-size: 25px;
+            margin: 0;
+            line-height: normal;
+          }
+        }
+      }
+    }
+  }
+  img {
+    width: auto !important;
+  }
+}
+
+#questoes-da-prova {
+  background: #f5f5f5;
+  
+  .align-wrapper {
+    justify-content: flex-start;
+  }
+  .text {
+    color: #333380;
+    margin-bottom: 30px;
+
+    h2 {
+      display: block;
+      font-size: 23px;
+      margin: 0;
+    }
+
+    p {
+      font-size: 18px;
+      margin: 0;
+    }
+  }
+}
