--- a/src/views/pages/home/style.scss
+++ b/src/views/pages/home/style.scss
@@ -144,6 +144,7 @@
 
         img {
           object-fit: fill;
+          width: 100%;
         }
       }
 
@@ -359,7 +360,7 @@
         }
 
         span {
-          //flex: 1;
+         color: #ffffff;
         }
       }
     }
