--- a/src/views/pages/home/index.html
+++ b/src/views/pages/home/index.html
@@ -32,7 +32,7 @@
           <p>
             <strong><i>Esta exposição</i></strong> é um convite a viajar<br/>
             no tempo. Escutar histórias. Conhecer<br/>
-            e reconhecer alguns daqueles que, há 30 anos,<br/>
+            e reconhecer algun daqueles que, há 30 anos,<br/>
             iniciavam uma jornada de fortalecimento<br/>
             do Ministério Público Federal (MPF).
           </p>
@@ -64,7 +64,7 @@
         <div class="card">
           <div class="membro">
             <div class="avatar">
-              <img src="@images/avatar-1.png" />
+              <img src="@images/joao-batista.png" />
             </div>
 
             <div class="dados">
@@ -75,6 +75,7 @@
 
           <div class="info">
             <p>Membro do MPF desde 1984, João Batista foi o primeiro procurador da República a exercer o cargo de secretário-geral do MPU. Durante a sua gestão, foi realizado o primeiro concurso público de servidores do Ministério Público da União.</p>
+            <button type="button" scr="https://www.youtube.com/watch?v=TIBEDlqjs00&list=PLbbVbiVtNJf0eWuGF55BP3dQsINLcrB1x&index=11">Assistir ao vídeo</button>
           </div>
         </div>
       </div>
@@ -82,17 +83,18 @@
         <div class="card">
           <div class="membro">
             <div class="avatar">
-              <img src="@images/avatar-1.png" />
+              <img src="@images/eliana-peres.png" />
             </div>
 
             <div class="dados">
-              <strong>João Batista de Almeida</strong>
-              <span>Secretário-geral do MPU<br/> de 1993 a 2000</span>
+              <strong>Eliana Peres Torelly de Carvalho</strong>
+              <span>Secretária-geral do MPU<br/> desde 2020</span>
             </div>
           </div>
 
           <div class="info">
-            <p>Membro do MPF desde 1984, João Batista foi o primeiro procurador da República a exercer o cargo de secretário-geral do MPU. Durante a sua gestão, foi realizado o primeiro concurso público de servidores do Ministério Público da União.</p>
+            <p>Eliana Torelly é subprocuradora-geral da República e coordenadora da 6ª Câmara de Coordenação e Revisão. Sua carreira no MPF começou em 1993.</p>
+            <button type="button" src="https://www.youtube.com/watch?v=EHmpmvDG8a4&list=PLbbVbiVtNJf0eWuGF55BP3dQsINLcrB1x&index=10">Assistir ao vídeo</button>
           </div>
         </div>
       </div>
